# codequest

./: .env_example  .gitignore  Makefile  README.md  docker-compose.sh  docker-compose.yml
.envs/.local/: .auth-ms
.envs_example/.local/: .front-ms  .postgres  .race-ms  .redis
.envs_example/.production/: .auth-ms  .front-ms  .postgres  .race-ms  .redis
.envs_example/.production_encrypted/: .auth-ms  .front-ms  .race-ms
auth-ms/: Dockerfile  app.py  boot.sh  config.py  main.py  models.py  pyproject.toml  services.py  views.py
auth-ms/migrations/: env.py
auth-ms/migrations/versions/: 477f954a5666_create_user_model.py  685b9f987143_rename_password_to_password_hash.py
auth-ms/services/: jwt_service.py  user_service.py
front-ms/: .env  .gitignore  Dockerfile  README.md  package.json  quasar.js  vite.config.js
front-ms/src/: App.vue  main.js
front-ms/src/api/: api.js  auth.js  index.js
front-ms/src/components/: HelloWorld.vue
front-ms/src/config/: index.js
front-ms/src/layouts/: default-layout.vue  empty-layout.vue
front-ms/src/pages/: about.vue  home.vue
front-ms/src/router/: index.js  routes.js
front-ms/src/socket/: index.js  (+1 more)
race-ms/: .env-example  .gitignore  Dockerfile  README.md  config.py  connection_manager.py  create-db.py  main.py  redis_db.py  requirements.txt
race-ms/api/: __init__.py  learn.py  matchmaker.py
race-ms/database/: __init__.py  create-db.py  create_db.py  main_tasks.py  models.py  singleplayer_tasks.py
race-ms/models/: __init__.py  tasks.py  users.py
race-ms/services/: __init__.py  learn.py  multiplayer.py
(+39 files in other folders)
